# ShaderDemo

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/common/: gl_utils.cpp  native_log.h
app/src/main/cpp/egl/: base_surface.cpp  egl_core.cpp  window_surface.cpp
app/src/main/cpp/filter/: base_filter.cpp  base_filter.h
app/src/main/cpp/render/: looper.cpp  looper.h  render_loop.cpp  render_loop.h  renderer.cpp  renderer.h
app/src/main/res/drawable/: seekbar_progress_drawable.xml
app/src/main/res/layout/: activity_album.xml  activity_basic_cropping.xml  activity_coordinator.xml  activity_douyin_test.xml  activity_dynamic_cropping.xml  activity_ffmpeg_player.xml  activity_gesture_surfaceview.xml  activity_image_surface.xml  activity_main.xml  activity_multiple_player.xml  activity_native_surface.xml  activity_off_screen_render.xml  activity_offscreen.xml  activity_prepare.xml  activity_recycler_touch.xml  activity_simple_gl.xml  activity_snap_helper.xml  activity_snap_helper_item.xml  activity_sticker.xml  fragment_video.xml  item_filter.xml  item_list_text.xml  item_recycler_touch_test.xml  item_text.xml  sticker_text_view.xml
app/src/main/res/raw/: album_circle_fragment_shader.glsl  album_circle_vertex_shader.glsl  album_cover2_fragment_shader.glsl  album_cover_fragment_shader.glsl  album_cover_vertex_shader.glsl  album_douyin_circle_fragment_shader.glsl  album_fragment_shader.glsl  base_vertex_shader.glsl  brightness_fragment_shader.glsl  corner_radius_fragment_shader.glsl  corner_radius_vertex_shader.glsl  electric_shock_fragment_shader.glsl  four_part_fragment_shader.glsl  gaussian_blur_fragment_shader.glsl  gaussian_blur_vertex_shader.glsl  gesture_vertex_shader.glsl  glass_sphere_fragment_shader.glsl  needing_fragment_shader.glsl  pixelation_fragment_shader.glsl  scalable_fragment_shader.glsl  sketch_fragment_shader.glsl  sobel_edge_detection_fragment_shader.glsl  soul_out_fragment_shader.glsl  soul_out_vertex_fragment.glsl  stand_alone_fragment_shader.glsl  swirl_fragment_shader.glsl  three_x_three_texture_sampling_vertex_shader.glsl  transform_vertex_shader.glsl  (+4 more)
(+123 files in other folders)
